# Intro-ops

./: .cnb.yml  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README.zh.md  requirements.txt
cmake/: CMakeMACAInformation.cmake  FindMetaX.cmake  GenerateOperators.cmake  cuda_helpers.cmake
course/: README.md
docs/: how-to-add-an-operator.md  phase1-kernel-writing.md
examples/: 01_copy.py  02_vector_add.py  03_reduce_sum.py  04_softmax.py  05_tilelang_copy_modes.py  06_relu.py
include/operator_runtime/: api.h  cuda_helpers.h  descriptor.h  elementwise.h  operation.h  operator_runtime.h  tensor_checks.h  tensor_view.h
include/operator_runtime/detail/: cuda_helpers.h  elementwise.h  operation.h  tensor_checks.h
include/operator_runtime/ops/: copy.h  reduce_sum.h  relu.h  softmax.h  vector_add.h
ops/: CMakeLists.txt
ops/common/: status.cc
ops/common/elementwise/metax/: elementwise_metax.h
ops/common/elementwise/nvidia/: elementwise_nvidia.cuh
ops/common/metax/: README.md
ops/common/nvidia/: elementwise.cuh  indexing.cuh
ops/common/tilelang/: eager_copy.py  lazy_out_idx_copy.py
ops/copy/: operator.yaml
ops/copy/metax/: README.md  copy_metax.h  copy_metax.maca
ops/copy/nvidia/: copy_cuda.cu  copy_cuda.h  cute_copy.cuh  kernel.cuh
ops/copy/tilelang/: copy_tl.py  kernel.py
ops/elementwise/relu/: relu_common.h
ops/elementwise/relu/metax/: relu_metax.maca
ops/elementwise/relu/nvidia/: relu_cuda.cu
ops/reduce_sum/: operator.yaml
ops/reduce_sum/metax/: README.md  reduce_sum_metax.h  reduce_sum_metax.maca
ops/reduce_sum/nvidia/: kernel.cuh  reduce_sum_cuda.cu  reduce_sum_cuda.h
ops/reduce_sum/tilelang/: kernel.py  reduce_sum_tl.py
ops/softmax/: operator.yaml
ops/softmax/metax/: README.md  softmax_metax.h  softmax_metax.maca
ops/softmax/nvidia/: kernel.cuh  softmax_cuda.cu  softmax_cuda.h
ops/softmax/tilelang/: kernel.py  softmax_tl.py
ops/vector_add/: operator.yaml
ops/vector_add/metax/: README.md  vector_add_metax.h  vector_add_metax.maca
ops/vector_add/nvidia/: kernel.cuh  vector_add_cuda.cu  vector_add_cuda.h
ops/vector_add/tilelang/: kernel.py  vector_add_tl.py
python/operator_runtime/: __init__.py  backend.py  benchmark.py  ctypes_bindings.py  loader.py  perf_model.py  prepared.py  profiler.py  testing.py
python/operator_runtime/_internal/: __init__.py  bindings.py  loader.py  prepared.py  tensor_view.py
python/operator_runtime/_runtime/: __init__.py  tensor_view.py
python/operator_runtime/ops/: __init__.py  _common.py  copy.py  reduce_sum.py  relu.py  softmax.py  vector_add.py
python/operator_runtime/testing/: __init__.py
python/operator_runtime_testing/: assertions.py  benchmark.py  profiler.py
scripts/: build_metax.sh  build_nvidia.sh
tests/: bench_all.py  conftest.py  run_ops.py  test_api_contract.py  test_correctness.py  test_descriptor_lifecycle.py  test_manifest_contract.py  test_tilelang_copy_templates.py
tests/bench/: copy.py  reduce_sum.py  relu.py  softmax.py  vector_add.py
tests/cases/: copy.py  reduce_sum.py  relu.py  softmax.py  vector_add.py
tests/op_tests/: test_reduce_sum.py  test_relu.py  test_vector_add.py
tests/ops/: test_copy.py  test_reduce_sum.py  test_softmax.py  test_vector_add.py
tests/perf_profiles/: local_gpu.yaml
tools/: generate_operator_artifacts.py  operator_schema.yaml  validate_operator_manifest.py
